# my-first-adk

./: .gitignore  README.md  pyproject.toml
_DRAFT/my_first_adk/: __main__.py  agent.py
app/: main.py  pyproject.toml
my_agents/: pyproject.toml
my_first_adk/: __main__.py  agent.py
src/app/: main.py
