[project]
dependencies = [
  "google-adk[all]>=0.5.0",
  "litellm>=1.68.1",
  "pydantic>=2.11.4",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.1.0",
]
description = "Add your description here"
name = "my-first-adk"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.pyright]
exclude = ["**/__pycache__", "**/.venv", "**/venv", "**/.mypy_cache"]
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"

[tool.ruff]
line-length = 180
