[project]
dependencies = [
  "google-adk>=0.5.0",
  "pyside6>=6.9.0",
]
description = "My first ADK agents"
name = "my-first-adk"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.poe.tasks]
app.script = "app.main:main"

[dependency-groups]
dev = [
  "poethepoet>=0.34.0",
]

[tool.pyright]
exclude = ["**/__pycache__", "**/.venv", "**/venv", "**/.mypy_cache"]
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"

[tool.ruff]
line-length = 180

[tool.hatch.build.targets.wheel]
packages = ["src"]
